crates/murphy-plugin-macros/tests/ui/fail_cop_cfg_on_on_node.stderr
error: #[cfg] / #[cfg_attr] on a #[on_node] method are not supported in v1 (the generated KINDS array and dispatch arm would still reference the conditionally-removed method); move the conditional gating outside the #[cop] impl
  --> tests/ui/fail_cop_cfg_on_on_node.rs:10:5
   |
10 |     #[cfg(feature = "nope")]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `murphy_ast::NodeId`
 --> tests/ui/fail_cop_cfg_on_on_node.rs:1:5
  |
1 | use murphy_ast::NodeId;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `murphy_plugin_api::Cx`
 --> tests/ui/fail_cop_cfg_on_on_node.rs:2:5
  |
2 | use murphy_plugin_api::Cx;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `on_node`
 --> tests/ui/fail_cop_cfg_on_on_node.rs:3:33
  |
3 | use murphy_plugin_macros::{cop, on_node};
  |                                 ^^^^^^^
